# carTruth

./: .env.example  .gitignore  GETTING_STARTED.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  inspect_dvla.py  inspect_dvsa.py  pyproject.toml  render.yaml  setup.bat  setup.sh
backend/: .env.example  requirements.txt  run.py
backend/app/: config.py  main.py
backend/app/models/: mot_schema.py  schemas.py
backend/app/routes/: vehicle.py
backend/app/services/: dvla_service.py  dvsa_auth_service.py  dvsa_service.py  gemini_report_service.py  gemini_report_writer.py  lookup_cache.py  mock_vehicle_service.py  mot_analysis_service.py  mot_data_normalizer.py  pdf_service.py  source_hash_service.py  (+3 more)
backend/tests/: test_analysis_services.py  test_config.py  test_lookup_cache.py  test_vehicle_route.py  test_vehicle_service.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: AIInsightsSection.tsx  ApiErrorCard.tsx  ConfidenceBadge.tsx  DataSourceBadge.tsx  EmptyStateCard.tsx  Header.tsx  MOTIntelligenceSection.tsx  MOTTimeline.tsx  MileageTrend.tsx  OwnershipIntelligenceSection.tsx  PdfSummaryReport.tsx  PrintFriendlyReportSection.tsx  ReportFeedbackCard.tsx  ReportSkeleton.tsx  ScoreDisplay.tsx  SearchBox.tsx  ShareFeedbackSection.tsx  ShareReportCard.tsx  VehicleHeroSection.tsx  VehicleIdentityCard.tsx  VehicleSpecificationPreview.tsx  VehicleSummary.tsx  VehicleVisualCard.tsx
frontend/lib/: api.ts  supabase.ts  vehicleVisualProfile.ts
frontend/styles/: globals.css
(+1 files in other folders)
