[project]
name = "cartruth"
version = "0.1.0"
requires-python = ">=3.9,<3.13"
dependencies = [
    "aiohttp==3.9.1",
    "fastapi==0.104.1",
    "playwright>=1.49,<2",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "uvicorn==0.24.0",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
